--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+wiki/logs
+wiki/*.log
+wiki/npm-debug.log*
+wiki/yarn-debug.log*
+wiki/yarn-error.log*
 
 # Dependency directory
-node_modules/
+wiki/node_modules/
 
 # Misc
 .DS_Store
